# ON2SolutionUI

./: .clang-format  .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/foundation/: CMakeLists.txt  all.h  config.hh  index.cc
components/foundation/components/: component.h  props.h  vnode.h
components/foundation/components/animated/: animated.h  animated_props.h
components/foundation/components/button/: button.h  button_props.h
components/foundation/components/circular_progress/: circular_progress.h  circular_progress_props.h
components/foundation/components/fragment/: fragment.h  fragment_props.h
components/foundation/components/image/: image.h  image_props.h
components/foundation/components/scroll_view/: scroll_view.h  scroll_view_props.h
components/foundation/components/status_bar/: status_bar.h  (+1 more)
components/foundation/core/: application.h  macro.h  shared.h  shortcuts.h
components/foundation/internals/: lvgl_port.c
components/foundation/unused/: references.txt  references_h.txt
main/: CMakeLists.txt  app.cc  control_config.hh  main.cc
main/components/: animated.cc  animated.hh  application.hh  base64.cc  button.cc  button.hh  callback.hh  circular_progress.cc  circular_progress.hh  component.hh  flex.hh  fragment.cc  fragment.hh  helpers.cc  image.cc  image.hh  indexer.cc  keyboard_manager.hh  label.cc  label.hh  macro.hh  references.cc  references.hh  renderer.cc  renderer.hh  scroll_view.cc  scroll_view.hh  stack_navigator.cc  stack_navigator.hh  state.hh  status_bar.cc  status_bar.hh  store.cc  style_store.cc  style_store.hh  styling.cc  styling.hh  text.cc  text.hh  text_input.cc  (+4 more)
main/core/: waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/lg/dataset/: dataset.dto.cc  fun_helpers.cc  parser.cc
main/protocols/uart/: uart.cc  uart.h
main/ui/: indexer.cc  localization.hh
main/ui/screens/: main_screen.cc  pincode_screen.cc  preloder_screen.cc  settings_screen.cc
main/ui/styles/: main_screen_styles.cc
(+17 files in other folders)
